Added Eventlisteners updated RPS to have buttons and even listeners

--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="rock-paper-scissors.js"></script>
+    <h3>First to 5 wins!</h3>
+    <div class="game">
+        <button type="button" value="1">Rock</button>
+        <button type="button" value="2">Paper</button>
+        <button type="button" value="3">Scissors</button>
+    </div>
+    <div>Player Score:</div>
+    <div id ="playerScore"></div>
+    <div>Computer Score:</div>
+    <div id ="computerScore"></div>
+    <div id ="content"></div>
+    <script src="rock-paper-scissors.js" defer></script>
 </body>
 </html>
