Added a play again button.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <button type="button" value="2">Paper</button>
         <button type="button" value="3">Scissors</button>
     </div>
+    <div class="retry"></div>
     <div>Player Score:</div>
     <div id ="playerScore"></div>
     <div>Computer Score:</div>
